gcampus/core/static_src/styles/_forms.scss
/*!
 * Copyright (C) 2021-2022 desklab gUG (haftungsbeschränkt)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 */
@use "sass:math";

$font-size-factor: math.div($font-size-lg, $font-size-base);

.token-field {
  width: 100%;
  margin-right: -1 * $border-width;
  font-family: 'JetBrains Mono', monospace;

  &[data-token-type="access"] {
    min-width: $font-size-factor * 9em;
  }

  &[data-token-type="course"] {
    min-width: $font-size-factor * 14em;
  }

}

// Fix issues with safari (see twbs/bootstrap#34760)
.form-control {
  &[type="datetime-local"] {
    height: $input-height;

    &.form-control-lg {
      height: $input-height-lg;
    }

    &.form-control-sm {
      height: $input-height-sm;
    }
  }
  >* {
    margin-bottom: 0;
    padding-bottom: 0;
  }
}

